--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wave Portal</title>
+    <title>Group chat</title>
     <meta name="title" content="Wave Portal" />
     <meta name="description" content="I want to meet you! Send me a wave now!" />
     
